<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">businessCard</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="email">信箱</string>
    <string name="password">密碼</string>
    <string name="login"><b>登入</b></string>
    <string name="logout"><b>登出</b></string>
    <string name="firstTime">第一次使用嗎?</string>
    <string name="register"><b>註冊</b></string>
    <string name="title_activity_edit_card">EditCardActivity</string>
    <string name="editYourCard"><b>編輯您的名片</b></string>
    <string name="importPhoto">匯入大頭貼</string>
    <string name="name">姓名</string>
    <string name="title">職稱</string>
    <string name="company">公司</string>
    <string name="department">部門</string>
    <string name="address">地址</string>
    <string name="telephone">電話</string>
    <string name="fax">傳真</string>
    <string name="cellphone">手機</string>
    <string name="eMail">e-mail</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="myCard">我的名片</string>
    <string name="editCard">編輯名片</string>
    <string name="browseCards">瀏覽名片簿</string>
    <string name="exchangeCard">交換名片</string>
    <string name="exchangeCardWithOthers">與他人交換名片</string>
    <string name="clickBluetoothBtn">請點選藍牙圖示</string>
    <string name="shareCardWithBlueTooth">使用藍牙將自己的名片</string>
    <string name="shareToFriends">傳送給朋友吧</string>
    <string name="connectBluetoothDevice">連結裝置</string>
    <string name="save">儲存</string>
    <string name="title_activity_exchange_card">ExchangeCardActivity</string>
    <string name="title_activity_browse_card">BrowseCardActivity</string>

    <!-- BluetoothChat -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting</string>
    <string name="title_connected_to">connected: </string>
    <string name="title_not_connected">not connected</string>

    <!-- DeviceListActivity -->
    <string name="scanning">scanning for devices</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="connect">Connect a device</string>
    <string name="discoverable">Make discoverable</string>
    <string name="title_activity_exchange_cardv2">ExchangeCardv2Activity</string>

</resources>
