<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundGray"
    tools:context="com.oop.businesscard.MainActivity$PlaceholderFragment" >

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="30dp"
        android:text="@string/email"
        android:textSize="22sp"
        android:textColor="@color/black">
        
    </TextView>

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/textfield_default"
        android:inputType="textEmailAddress">        
    </EditText>
    
    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailInput"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:text="@string/password"
        android:textSize="22sp"
        android:textColor="@color/black">
        
    </TextView>

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/textfield_default"
        android:inputType="textPassword">    
    </EditText>    
    
    
    <TextView
        android:id="@+id/login"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/passwordInput"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/login"
        android:textSize="22sp"
        android:textColor="@color/white"
        android:background="@drawable/blue_button"
        android:clickable="true">
        
    </TextView>
    
    <TextView
        android:id="@+id/firstTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:text="@string/firstTime"
        android:textSize="14sp"
        android:textColor="@color/black">
        
    </TextView>
    
    
        
    <TextView
        android:id="@+id/register"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/firstTime"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/register"
        android:textSize="22sp"
        android:textColor="@color/white"
        android:background="@drawable/orange_button"
        android:clickable="true">
        
    </TextView>
</RelativeLayout>
